# papers

./: .gitignore  README.md  pyproject.toml  requirements.txt
Neural Machine Translation/: .gitignore  README.md  app.py  calc_params.py  en_mr_unigram.model  en_mr_unigram.vocab  generate_wordclouds.py  gr_app.py  inference.py  prepare_hf_model.py  requirements.txt  seq2seq.py  train.py
Neural Machine Translation/notebooks/: EDA.ipynb  tokenizer.ipynb
Neural Machine Translation/scripts/: calc_params.py  generate_wordclouds.py  inference.py  prepare_hf_model.py  train.py
Neural Machine Translation/src/: attention.py  dataset.py  decoder.py  encoder.py  eval_utils.py
Quantifying the Rise and Fall of Complexity in Closed Systems: The Coffee Automaton/: LCC.md  Light_Cone_Complexity.py
RNN_LSTM/: .gitignore  VanillaRNN.py  app.py  best_model.pth  data_processing.md  dataset.py  final_model.pth  predict.py  readme.md  requirements.txt
RNN_LSTM/runs/lstm/: events.out.tfevents.1771111819.Yashs-MacBook-Pro-2.local.16586.0
RNN_LSTM/runs/run1/: events.out.tfevents.1770859050.Yashs-MacBook-Pro-2.local.38906.0
RNN_LSTM/runs/run2/: events.out.tfevents.1771021746.Yashs-MacBook-Pro-2.local.5675.0
VAE/: .gitignore  README.md  requirements.txt
VAE/notebooks/: vae_training.ipynb
